Change issues with naming and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
 
 html {
   box-sizing: border-box;
-  font: normal, 100%/1.3 "Noto Sans", sans-serif;
+  font: normal 100%/1.3 "Noto Sans", sans-serif;
 
   -moz-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
@@ -19,29 +19,32 @@ html {
 }
 
 body {
-  font-size: 100%/1.3;
-  font-family: "Noto Sans", sans-serif;
   margin: 0;
 }
 
-.wrapper {
+section {
   background-color: #e5c30a;
   width: 100%;
   display: block;
   padding: 1.4rem;
 }
 
+.wrapper {
+  max-width: 45em;
+  margin: 1rem;
+}
+
 .section-body {
   display: inline-block;
 }
 
-h2 {
+section h2 {
   font-weight: bold;
   margin: 0;
   font-size: 1.5rem;
 }
 
-p {
+section p {
   margin-top: 0;
 }
 
@@ -55,7 +58,8 @@ img {
   width: 49%;
 }
 
-@media only screen and (min-width: 25em){
+@media only screen and (min-width: 25em) {
+
   html {
     line-height: 1.3;
     font-size: 100%;
@@ -63,10 +67,12 @@ img {
 
   .section-icon, .section-letter {
     width: auto;
+  }
 
 }
 
-@media only screen and (min-width: 38em){
+@media only screen and (min-width: 38em) {
+
   html {
     line-height: 1.4;
     font-size: 110%;
@@ -82,6 +88,10 @@ img {
     order: 3;
   }
 
+  .section-letter {
+    order: 1;
+  }
+
   .img-flex {
     max-width: 10em;
   }
@@ -92,7 +102,8 @@ img {
 
 }
 
-@media only screen and (min-width: 60em){
+@media only screen and (min-width: 60em) {
+
   html {
     line-height: 1.5;
     font-size: 120%;
@@ -104,9 +115,9 @@ img {
 
 }
 
-@media only screen and (min-width: 90em){
+@media only screen and (min-width: 90em) {
+
   html {
-    line-height: 1.5;
     font-size: 130%;
   }
 
